bug with div appearing behind an img on hover effect

--- a/react-app/src/components/IndivSlide/IndivSlide.css
+++ b/react-app/src/components/IndivSlide/IndivSlide.css
@@ -18,6 +18,6 @@
 }
 
 .album:hover {
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
   transform: scale3d(1.15, 1.15, 1.15);
 }
